overflow bugfix

--- a/src/assets/styles/main.less
+++ b/src/assets/styles/main.less
@@ -14,6 +14,7 @@
 
 html {
   width: 100vw !important;
+  overflow-y: overlay;
 }
 * {
   box-sizing: border-box;
